feat: implement book update
