# app/controller.go
@@ -41,6 +41,7 @@ func bindRoute(e *echo.Echo, c Controller, ba auth.BearerAuth) {
 	// b.GET("/:isbn", c.Book.FindBookByISBN, ba.ValidateBearerHeader)
 	b.GET("/search", c.Book.Search)
 	b.POST("", c.Book.CreateBook, ba.ValidateBearerHeader)
+	b.PATCH("/:bookId", c.Book.UpdateBook, ba.ValidateBearerHeader)
 	u.GET("/token", c.User.CreateUserAndToken)
 	u.GET("", c.User.FindUser, ba.ValidateBearerHeader)
 	m.POST("", c.Memo.CreateMemo, ba.ValidateBearerHeader)
